--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
-name = "todo"
+name = "todoz"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+serde = { version = "1.0.214", features = ["derive"] }
+serde_json = "1.0.132"
+dirs = "5.0"  
