--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2024"
 [dependencies]
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
-dirs = "5.0"  
+dirs = "5.0" 
+
+[[bin]]
+name = "todoz"
+path = "src/main.rs"
